Update pr prsn units and variable name prefix

--- a/public/external-text/default.yaml
+++ b/public/external-text/default.yaml
@@ -257,23 +257,24 @@ maps:
         max: 10000
       ticks: [0, 2000, 4000, 6000, 8000, 10000]
     pr:
-      palette: seq-Greens
+      palette: x-Occam
+#      palette: seq-Greens
       logscale: true
       belowMinColor: white
       aboveMaxColor: black
-      # NB: units mm/mon
+      # NB: units mm/month
       range:
         min: 10
         max: 500
-      ticks: [10, 20, 40, 100, 200, 400, 500]
+      ticks: [10, 20, 40, 80, 100, 200, 400, 800, 500]
     prsn:
       palette: x-Occam
       logscale: true
-      # NB: units mm/mon
+      # NB: units mm/month
       range:
         min: 10
-        max: 2000
-      ticks: [10, 100, 1000, 2000]
+        max: 200
+      ticks: [10, 20, 40, 80, 100, 200]
     tasmax:
       palette: x-Occam
       range:
@@ -569,7 +570,7 @@ components:
 
 colourScale:
   label: |
-    ${id === 'prsn' || id === 'pr' ? 'Monthly Average' : ''} ${label} (${units})
+    ${id === 'prsn' || id === 'pr' ? 'Average' : ''} ${label} (${units})
   note: |
     ${logscale ? $$.colourScale.logscaleNote : ''} This colour scale applies to both maps.
   logscaleNote: |
@@ -591,13 +592,13 @@ variables:
   pr:
     label: Precipitation
     type: precipitation flux
-    displayUnits: mm/mon
+    displayUnits: mm/month
     dataUnits: kg m-2 d-1
   prsn:
     label: Precipitation as Snow
     derived: true
-    type: snowfall flux
-    displayUnits: mm/mon
+    type: precipitation flux
+    displayUnits: mm/month
     dataUnits: kg m-2 d-1
   gdd:
     label: Growing Degree-Days
@@ -642,13 +643,13 @@ units:
     'mm/d': 365           # another unit: scale: 365, offset: 0
     'kg m-2 d-1': mm/d    # synonym
     'mm': mm/yr           # synonym
-    'mm/mon': 12
+    'mm/month': 12
   'snowfall flux':
     'mm/yr': 1
     'mm/d': 365
     'kg m-2 d-1': 3650    # approximation that converts mass to snow depth
     'mm': mm/yr
-    'mm/mon': 12
+    'mm/month': 12
   temperature:
     degC: 1
     '°C': degC
