--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "start": "react-scripts start",
     "start-env": "REACT_APP_VERSION=\"$(./generate-commitish.sh)\" react-scripts start",
     "build": "react-scripts build",
+    "build-serve": "react-scripts build && serve -s build -l 3001",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "reinstall": "rm -rf ./node_modules; npm install"
