--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "start-env": "REACT_APP_VERSION=\"$(./generate-commitish.sh)\" react-scripts start",
     "build": "react-scripts build",
     "build-serve": "react-scripts build && serve -s build -l 3001",
+    "build-update": "cp ./public/external-text/default.yaml ./build/external-text/default.yaml",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "reinstall": "rm -rf ./node_modules; npm install"
