--- a/public/external-text/default.yaml
+++ b/public/external-text/default.yaml
@@ -1,6 +1,6 @@
 app:
   tabs:
-    default: graphs
+    default: maps
 
 selectors:
   prologue: |
@@ -252,86 +252,102 @@ tabs:
       title: "#### Projected: ${$$.components.period}"
     colourScale:
       label: |
-        ${id === 'prsn' || id === 'pr' ? 'Average' : ''} ${label} (${units})
+        ${id === 'prsn' || id === 'pr' ? 'Average' : ''} ${label} (${unitsSpec.label})
       note: |
         ${logscale ? $$.tabs.maps.colourScale.logscaleNote : ''} This colour scale applies to both maps.
       logscaleNote: |
         *This colour scale is logarithmic.
         A logarithmic scale cannot include zero values;
         these are mapped to the below-minimum colour.* <br/>
-    displaySpec:
-      # Organized by variable.
+    config:
+      variables:
       # NB: range and tick values are in *display* units.
-      fallback:
-        palette: seq-Oranges
-        logscale: false
-        belowMinColor: white
-        aboveMaxColor: black
-        range:
-          min: -50
-          max: 50
-        ticks: [-50, 0, 50]
-      ffd:
-        palette: x-Occam
-        range:
-          min: 0
-          max: 366
-        ticks: [0, 100, 200, 300, 365]
-      gdd:
-        palette: x-Occam
-        range:
-          min: 0
-          max: 4000
-        ticks: [0, 1000, 2000, 3000, 4000]
-      hdd:
-        palette: x-Occam
-        range:
-          min: 0
-          max: 10000
-        ticks: [0, 2000, 4000, 6000, 8000, 10000]
-      cdd:
-        palette: x-Occam
-        range:
-          min: 0
-          max: 1000
-        ticks: [0, 250, 500, 750, 1000]
-      pr:
-        palette: x-Occam
-  #      palette: seq-Greens
-        logscale: true
-        belowMinColor: white
-        aboveMaxColor: black
-        # NB: units mm/month
-        range:
-          min: 10
-          max: 500
-        ticks: [10, 20, 40, 80, 100, 200, 400, 800, 500]
-      prsn:
-        palette: x-Occam
-        logscale: true
-        # NB: units mm/month
-        range:
-          min: 10
-          max: 200
-        ticks: [10, 20, 40, 80, 100, 200]
-      tasmax:
-        palette: x-Occam
-        range:
-          min: -40
-          max: 40
-        ticks: [-40, -30, -20, -10, 0, 10, 20, 30, 40]
-      tasmin:
-        palette: x-Occam
-        range:
-          min: -40
-          max: 40
-        ticks: [-40, -30, -20, -10, 0, 10, 20, 30, 40]
-      tasmean:
-        palette: x-Occam
-        range:
-          min: -40
-          max: 40
-        ticks: [-40, -30, -20, -10, 0, 10, 20, 30, 40]
+      # TODO: Remove fallback
+        fallback:
+          palette: seq-Oranges
+          logscale: false
+          belowMinColor: white
+          aboveMaxColor: black
+          range:
+            min: -50
+            max: 50
+          ticks: [-50, 0, 50]
+        ffd:
+          display: absolute
+          displayUnits: days
+          palette: x-Occam
+          range:
+            min: 0
+            max: 366
+          ticks: [0, 100, 200, 300, 365]
+        gdd:
+          display: absolute
+          displayUnits: degree-days
+          palette: x-Occam
+          range:
+            min: 0
+            max: 4000
+          ticks: [0, 1000, 2000, 3000, 4000]
+        hdd:
+          display: absolute
+          displayUnits: degree-days
+          palette: x-Occam
+          range:
+            min: 0
+            max: 10000
+          ticks: [0, 2000, 4000, 6000, 8000, 10000]
+        cdd:
+          display: absolute
+          displayUnits: degree-days
+          palette: x-Occam
+          range:
+            min: 0
+            max: 1000
+          ticks: [0, 250, 500, 750, 1000]
+        pr:
+          display: absolute
+          displayUnits: mm/month
+          palette: x-Occam
+          logscale: true
+          belowMinColor: white
+          aboveMaxColor: black
+          # NB: units mm/month
+          range:
+            min: 10
+            max: 500
+          ticks: [10, 20, 40, 80, 100, 200, 400, 800, 500]
+        prsn:
+          display: absolute
+          displayUnits: mm/month
+          palette: x-Occam
+          logscale: true
+          # NB: units mm/month
+          range:
+            min: 10
+            max: 200
+          ticks: [10, 20, 40, 80, 100, 200]
+        tasmax:
+          display: absolute
+          displayUnits: °C
+          palette: x-Occam
+          range:
+            min: -40
+            max: 40
+          ticks: [-40, -30, -20, -10, 0, 10, 20, 30, 40]
+        tasmin:
+          palette: x-Occam
+          range:
+            min: -40
+            max: 40
+          ticks: [-40, -30, -20, -10, 0, 10, 20, 30, 40]
+        tasmean:
+          display: absolute
+          displayUnits: °C
+          palette: x-Occam
+          range:
+            min: -40
+            max: 40
+          ticks: [-40, -30, -20, -10, 0, 10, 20, 30, 40]
 
   graphs:
     disabled: false
