--- a/public/external-text/default.yaml
+++ b/public/external-text/default.yaml
@@ -17,11 +17,11 @@ selectors:
     forTabs: ['summary', 'impacts', 'maps']
   variable:
     prefix: with details about
-    default: tasmean
+    default: prsn
     forTabs: ['maps', 'graphs']
   season:
     prefix: for a typical
-    default: 16
+    default: 12
     postfix: period
     forTabs: ['maps', 'graphs']
 
@@ -252,7 +252,7 @@ tabs:
       title: "#### Projected: ${$$.components.period}"
     colourScale:
       label: |
-        ${id === 'prsn' || id === 'pr' ? 'Average' : ''} ${label} (${unitsSpec.label})
+        ${label} (${unitsSpec.label})
       note: |
         ${logscale ? $$.tabs.maps.colourScale.logscaleNote : ''} This colour scale applies to both maps.
       logscaleNote: |
@@ -261,9 +261,10 @@ tabs:
         these are mapped to the below-minimum colour.* <br/>
     config:
       variables:
-      # NB: range and tick values are in *display* units.
-      # TODO: Remove fallback
+        # NB: range and tick values are in *display* units.
         fallback:
+          display: absolute
+          displayUnits: foo
           palette: seq-Oranges
           logscale: false
           belowMinColor: white
@@ -306,26 +307,80 @@ tabs:
           ticks: [0, 250, 500, 750, 1000]
         pr:
           display: absolute
-          displayUnits: mm/month
           palette: x-Occam
           logscale: true
           belowMinColor: white
           aboveMaxColor: black
-          # NB: units mm/month
-          range:
-            min: 10
-            max: 500
-          ticks: [10, 20, 40, 80, 100, 200, 400, 800, 500]
+          seasons:
+            annual:
+              displayUnits: mm/year (cum)
+              range:
+                min: 10
+                max: 4000
+              ticks: [10, 20, 40, 80, 100, 200, 400, 800, 1000, 2000, 4000]
+            winter:
+              displayUnits: mm/season (cum)
+              range:
+                min: 10
+                max: 2000
+              ticks: [10, 20, 40, 80, 100, 200, 400, 800, 1000, 2000]
+            spring:
+              displayUnits: mm/season (cum)
+              range:
+                min: 10
+                max: 1000
+              ticks: [10, 20, 40, 80, 100, 200, 400, 800, 1000]
+            summer:
+              displayUnits: mm/season (cum)
+              range:
+                min: 10
+                max: 500
+              ticks: [10, 20, 40, 80, 100, 200, 400, 500]
+            fall:
+              displayUnits: mm/season (cum)
+              range:
+                min: 10
+                max: 2000
+              ticks: [10, 20, 40, 80, 100, 200, 400, 800, 1000, 2000]
         prsn:
           display: absolute
-          displayUnits: mm/month
           palette: x-Occam
           logscale: true
-          # NB: units mm/month
           range:
             min: 10
             max: 200
           ticks: [10, 20, 40, 80, 100, 200]
+          seasons:
+            annual:
+              displayUnits: mm/year (cum)
+              range:
+                min: 10
+                max: 1000
+              ticks: [10, 20, 40, 80, 100, 200, 400, 800, 1000]
+            winter:
+              displayUnits: mm/season (cum)
+              range:
+                min: 10
+                max: 500
+              ticks: [10, 20, 40, 80, 100, 200, 400, 500]
+            spring:
+              displayUnits: mm/season (cum)
+              range:
+                min: 10
+                max: 200
+              ticks: [10, 20, 40, 80, 100, 200]
+            summer:
+              displayUnits: mm/season (cum)
+              range:
+                min: 1
+                max: 20
+              ticks: [1, 2, 4, 8, 10, 20]
+            fall:
+              displayUnits: mm/season (cum)
+              range:
+                min: 10
+                max: 200
+              ticks: [10, 20, 40, 80, 100, 200]
         tasmax:
           display: absolute
           displayUnits: °C
@@ -335,6 +390,8 @@ tabs:
             max: 40
           ticks: [-40, -30, -20, -10, 0, 10, 20, 30, 40]
         tasmin:
+          display: absolute
+          displayUnits: °C
           palette: x-Occam
           range:
             min: -40
@@ -711,6 +768,7 @@ units:
     'mm/d': 365.25
     'kg m-2 d-1': mm/d
     'mm': mm/yr
+    'mm/year': mm/yr
     'mm/season': 4
     'mm/month': 12
     'mm/year (cum)':
