Add 'Total' annotation to pr, prsn in Maps

--- a/public/external-text/default.yaml
+++ b/public/external-text/default.yaml
@@ -252,7 +252,7 @@ tabs:
       title: "#### Projected: ${$$.components.period}"
     colourScale:
       label: |
-        ${label} (${unitsSpec.label})
+        ${ (id === 'pr' || id === 'prsn') ? 'Total' : '' } ${label} (${unitsSpec.label})
       note: |
         ${logscale ? $$.tabs.maps.colourScale.logscaleNote : ''} This colour scale applies to both maps.
       logscaleNote: |
