--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -4,9 +4,8 @@ on:
   push:
     branches:
       - '*'
-  release:
-    type:
-      - created
+    tags:
+      - '[0-9]+.[0-9]+.[0-9]+'
 
 jobs:
   docker-publish:
