--- a/.github/workflows/image-scan.yml
+++ b/.github/workflows/image-scan.yml
@@ -1,10 +1,10 @@
 name: Docker Image Scan
 
-on:
-  push:
-    branches:
-      - master
-      - '*security*'
+on: push
+  # push:
+  #   branches:
+  #     - master
+  #     - '*security*'
 
 jobs:
   scan:
@@ -12,20 +12,15 @@ jobs:
     runs-on: ubuntu-18.04
 
     steps:
-      - name: Wait for image to be published
-        uses: fountainhead/action-wait-for-check@v1.0.0
-        id: wait-for-build
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          checkName: publish
-          ref: ${{ github.sha }}
-      - name: Get branch name
-        uses: nelonoel/branch-name@v1
-      - name: Set Branch Name to Environment Variable
-        run: echo ::set-env name=TAG::$(echo ${BRANCH_NAME})
-      - name: Scan Image
-        uses: anchore/scan-action@master
-        with:
-          image-reference: "pcic/plan2adapt-v2-frontend:${{ env.TAG }}"
-          fail-build: true
-        if: steps.wait-for-build.outputs.conclusion == 'success'
+    - uses: actions/checkout@v1
+    - name: Docker Build
+      run: docker build . --file Dockerfile --tag pcic/plan2adapt-v2-frontend:test-image
+    - uses: anchore/scan-action@v1
+      with:
+        image-reference: "pcic/plan2adapt-v2-frontend:test-image"
+        fail-build: true
+    - name: Upload Report
+      uses: actions/upload-artifact@v1.0.0
+      with:
+        name: AnchoreReports
+        path: ./anchore-reports/
