--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
-REACT_APP_CE_BACKEND_URL=https://services.pacificclimate.org/pcex/api/
+REACT_APP_CE_BACKEND_URL=http://docker-dev01.pcic.uvic.ca:30504/api/
 REACT_APP_TILECACHE_URL=https://b.tile.pacificclimate.org/tilecache/tilecache.py
-REACT_APP_NCWMS_URL=https://services.pacificclimate.org/pcex/ncwms
+REACT_APP_NCWMS_URL=http://docker-dev01.pcic.uvic.ca:30501/ncWMS/wms
 REACT_APP_REGIONS_SERVICE_URL=https://services.pacificclimate.org/plan2adapt/regions/ows
 REACT_APP_RULES_ENGINE_URL=https://services.pacificclimate.org/plan2adapt/impacts
 REACT_APP_ENSEMBLE_NAME=p2a_classic
 REACT_APP_MODEL_ID=PCIC12;anusplin
 REACT_APP_EMISSIONS_SCENARIOS=historical,rcp85;historical, rcp85;historical
-REACT_APP_MAP_LAYER_ID_TYPE=simple
-REACT_APP_MAP_LAYER_ID_PREFIX=
+REACT_APP_MAP_LAYER_ID_TYPE=dynamic
+REACT_APP_MAP_LAYER_ID_PREFIX=x
 REACT_APP_EXTERNAL_TEXT=external-text/default.yaml
