--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-REACT_APP_CE_BACKEND_URL=http://docker-dev01.pcic.uvic.ca:30504/api/
+REACT_APP_CE_BACKEND_URL=https://services.pacificclimate.org/dev/pcex/api
 REACT_APP_TILECACHE_URL=https://b.tile.pacificclimate.org/tilecache/tilecache.py
-REACT_APP_NCWMS_URL=http://docker-dev01.pcic.uvic.ca:30501/ncWMS/wms
+REACT_APP_NCWMS_URL=http://docker-dev02.pcic.uvic.ca:30778/ncWMS/wms
 REACT_APP_REGIONS_SERVICE_URL=https://services.pacificclimate.org/plan2adapt/regions/ows
 REACT_APP_RULES_ENGINE_URL=https://services.pacificclimate.org/plan2adapt/impacts
 REACT_APP_ENSEMBLE_NAME=p2a_classic
