--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "pcic-react-leaflet-components": "git+https://git@github.com/pacificclimate/pcic-react-leaflet-components.git",
     "proj4": "^2.5.0",
     "proj4leaflet": "^1.0.2",
+    "promise-polyfill": "8.1.3",
     "prop-types": "^15.6.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
