--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -23,6 +23,7 @@ jobs:
         with:
           username: ${{ secrets.pcicdevops_at_dockerhub_username }}
           password: ${{ secrets.pcicdevops_at_dockerhub_password }}
+          dockerfile: docker/Dockerfile
           repository: pcic/plan2adapt-v2-frontend
           tag_with_ref: true
           build_args: REACT_APP_VERSION=${{ env.REACT_APP_VERSION }}
