--- a/.dockerignore
+++ b/.dockerignore
@@ -1,1 +1,21 @@
-.git
+# See https://help.github.com/ignore-files/ for more about ignoring files.
+
+# IDE
+/.idea
+
+# dependencies
+/node_modules
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
