--- a/docker/fe.env
+++ b/docker/fe.env
@@ -1,6 +1,6 @@
 REACT_APP_CE_BACKEND_URL=https://services.pacificclimate.org/pcex/api/
 REACT_APP_BASE_MAP=BC
-REACT_APP_BC_BASE_MAP_TILES_URL=http://142.104.230.53:30790/osm-bc-lite-test/{z}/{x}/{y}.png
+REACT_APP_BC_BASE_MAP_TILES_URL=https://services.pacificclimate.org/tiles/bc-albers-lite/{z}/{x}/{y}.png
 REACT_APP_REGIONS_SERVICE_URL=https://services.pacificclimate.org/plan2adapt/regions/ows
 REACT_APP_RULES_ENGINE_URL=https://services.pacificclimate.org/plan2adapt/impacts/
 REACT_APP_ENSEMBLE_NAME=p2a_classic
